--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
   "author": "Ayooluwa Isaiah",
   "license": "MIT",
   "scripts": {
-    "dev": "npx concurrently \"rm -rf dist\" \"npx tsc --watch\" \"npx browser-sync start -sw --port='8100' --serveStatic='src' -f 'dist' 'src'\"",
-    "start": "rm -rf dist && npx tsc && npx browser-sync start -sw --port='8100' --serveStatic='src'"
+    "start": "rm -rf dist && npx webpack --mode='production' && npx browser-sync start -sw --port='8100' --serveStatic='src'"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.19.2",
     "@typescript-eslint/parser": "^2.19.2",
-    "browser-sync": "^2.26.7",
     "concurrently": "^5.1.0",
+    "copy-webpack-plugin": "^5.1.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-typescript": "^7.0.0",
     "eslint-config-prettier": "^6.10.0",
@@ -23,6 +22,10 @@
     "stylelint": "^13.1.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-standard": "^20.0.0",
-    "typescript": "^3.7.5"
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.8.2",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
+    "browser-sync": "^2.26.7"
   }
 }
