--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "dist/",
+    "sourceMap": true,
     "noImplicitAny": true,
     "module": "es6",
     "strict": true,
