--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.19.2",
     "@typescript-eslint/parser": "^2.19.2",
+    "browser-sync": "^2.26.7",
     "concurrently": "^5.1.0",
     "copy-webpack-plugin": "^5.1.1",
     "eslint": "^6.8.0",
@@ -25,7 +26,6 @@
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.2",
     "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11",
-    "browser-sync": "^2.26.7"
+    "webpack-cli": "^3.3.11"
   }
 }
